Updated chat.css to fix layout issues

--- a/src/app/chat/chat.css
+++ b/src/app/chat/chat.css
@@ -1,10 +1,24 @@
+.chat-container {
+	margin: 5px 11px;
+	padding: 5px 11px;
+	justify-content: space-between;
+}
+
 .participants-list {
 	background-color: #FFF;
-	padding: 0 !important;
+	margin-right: 5px;
 
-	-webkit-box-shadow: 1px 5px 20px 0px rgba(0,0,0,0.50);
-	-moz-box-shadow: 1px 5px 20px 0px rgba(0,0,0,0.50);
-	box-shadow: 1px 5px 20px 0px rgba(0,0,0,0.50);
+	-webkit-box-shadow: -3px 5px 10px 0px rgba(0,0,0,0.50);
+	-moz-box-shadow: -3px 5px 10px 0px rgba(0,0,0,0.50);
+	box-shadow: -3px 5px 10px 0px rgba(0,0,0,0.50);
+}
+
+.chat-messages {
+	background-color: #FFF;
+
+	-webkit-box-shadow: 3px 5px 10px 0px rgba(0,0,0,0.50);
+	-moz-box-shadow: 3px 5px 10px 0px rgba(0,0,0,0.50);
+	box-shadow: 3px 5px 10px 0px rgba(0,0,0,0.50);
 }
 
 .participants-list-header,
